--- a/petstore/.gitattributes
+++ b/petstore/.gitattributes
@@ -8,3 +8,25 @@
 
 /.github export-ignore
 CHANGELOG.md export-ignore
+
+# Force Windows users to use CRLF on checkout
+*.php text eol=crlf
+*.js text eol=crlf
+*.css text eol=crlf
+*.html text eol=crlf
+*.json text eol=crlf
+*.md text eol=crlf
+*.txt text eol=crlf
+
+# Keep shell scripts and system files in LF (Linux/Mac compatibility)
+*.sh text eol=lf
+*.yml text eol=lf
+*.yaml text eol=lf
+
+# Binary files (don't convert line endings)
+*.png binary
+*.jpg binary
+*.gif binary
+*.ico binary
+*.pdf binary
+*.zip binary
